Added the skew back in

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Overlay -->
 		<div class="global-overlay">
-			<div class="overlay"></div>
+			<div class="overlay skew-part"></div>
 		</div>
 
 		<!-- START - Home/Left Part -->
